<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="?android:attr/actionBarSize"
    tools:context=".ui.profile.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="20dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civ_profileAvatar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/cl_profile"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/oni_bg" />

        <TextView
            android:id="@+id/tv_guest"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="50dp"
            app:layout_constraintStart_toEndOf="@+id/civ_profileAvatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/civ_profileAvatar"
            android:text="@string/guest"
            android:textSize="25sp"

            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/cl_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:cardCornerRadius="5dp"
        >

        <TextView
            android:id="@+id/tv_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_theme_mode"
            android:textSize="25sp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"
            />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toBottomOf="@+id/cv_theme"
        app:layout_constraintStart_toStartOf="parent"
        app:cardCornerRadius="5dp"
        >

        <TextView
            android:id="@+id/tv_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textSize="25sp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"
            />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>